how it works html made

--- a/index.html
+++ b/index.html
@@ -35,6 +35,27 @@
         <a href="#" class="button text">Explore our restaurants</a>
     </section>
 
+    <section>
+        <h2 class="spacing text-title">How it works</h2>
+
+        <ol class="how-work">
+            <li>
+                <i class="fa-solid fa-mobile-screen-button dark-gray spacing-icon"></i>
+                Chose a restaurant
+            </li>
+            <li>
+                <i class="fa-sharp fa-solid fa-list-ul dark-gray spacing-icon"></i>
+                Create your menu
+            </li>
+            <li>
+                <i class="fa-solid fa-store color-primary spacing-icon"></i>
+                Go enjoy it at the restaurant
+            </li>
+        </ol>
+
+    </section>
+
+
 
 
 
