created the cards and footer sections

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <a href="#" class="button text">Explore our restaurants</a>
     </section>
 
-    <section>
+    <section class="bottom-spacing">
         <h2 class="spacing text-title">How it works</h2>
 
-        <ol class="how-work">
+        <ol class="info-list">
             <li>
                 <i class="fa-solid fa-mobile-screen-button dark-gray spacing-icon"></i>
                 Chose a restaurant
@@ -47,14 +47,36 @@
                 <i class="fa-sharp fa-solid fa-list-ul dark-gray spacing-icon"></i>
                 Create your menu
             </li>
-            <li>
+            <li class="active">
                 <i class="fa-solid fa-store color-primary spacing-icon"></i>
                 Go enjoy it at the restaurant
             </li>
         </ol>
+    </section>
+
+    <section class="restaurants spacing bkg-light-gray">
+        <h2 class="text-title">Restaurants</h2>
+        <div class="column">
+            <a href="#" class="card">
+                <div class="tag">
+                    <h3 class="card-tag">New</h3>
+                </div>
+                <img class="restaurant-img"
+                    src="/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                    alt="Jay Wennington" title="Jay Wennington Restaurant">
+                
+                <div class="card-text">
+                    <h2 class="text-large">The Full Palette</h2>
+                    <p class="text">New York</p>
+                </div>
+            </a>
+        </div>
 
     </section>
 
+    <section class="footer spacing bkg-light-black spacing-top">
+        <p class="text-large white logo-font">ohmyfood</p>
+    </section>
 
 
 
