--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </header>
 
-    <section class="column bkg-light-gray spacing">
+    <section class="column align-center bkg-light-gray spacing">
         <h2 class="bottom-spacing text-title">Book the menu you like</h2>
         <p class="bottom-spacing text-large dark-gray max-width">Discover top-of-the-art restaurants we picked for you
         </p>
@@ -56,26 +56,43 @@
 
     <section class="restaurants spacing bkg-light-gray">
         <h2 class="text-title">Restaurants</h2>
-        <div class="column">
-            <a href="#" class="card">
-                <div class="tag">
-                    <h3 class="card-tag">New</h3>
-                </div>
-                <img class="restaurant-img"
-                    src="/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                    alt="Jay Wennington" title="Jay Wennington Restaurant">
-                
+        <div class="column align-center">
+            <div href="#" class="card">
+                <div class="card-tag">New</div>
+                <img class="restaurant-img" src="/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Jay Wennington"
+                    title="Jay Wennington Restaurant">
+
                 <div class="card-text">
                     <h2 class="text-large">The Full Palette</h2>
                     <p class="text">New York</p>
                 </div>
-            </a>
+                
+            </div>
         </div>
 
     </section>
 
     <section class="footer spacing bkg-light-black spacing-top">
-        <p class="text-large white logo-font">ohmyfood</p>
+        <div class="column small-gap">
+            <a href="#" class="text-large white logo-font">
+                ohmyfood
+            </a>
+            <a href="#" class="text white">
+                <i class="fa-solid fa-utensils small-width s-icon"></i>
+                Suggest a restaurant
+            </a>
+            <a href="#" class="text white">
+                <i class="fa-solid fa-handshake-angle small-width xs-icon"></i>
+                Become a partner
+            </a>
+            <a href="#" class="text white">
+                Legal
+            </a>
+            <a href="#" class="text white">
+                Contact
+            </a>
+        </div>
+
     </section>
 
 
