--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </header>
 
     <section class="column align-center bkg-light-gray spacing">
-        <h2 class="bottom-spacing text-title">Book the menu you like</h2>
-        <p class="bottom-spacing text-large dark-gray max-width">Discover top-of-the-art restaurants we picked for you
+        <h2 class="bottom-spacing text-title text-center">Book the menu you like</h2>
+        <p class="bottom-spacing text-large dark-gray max-width text-center">Discover top-of-the-art restaurants we picked for you
         </p>
         <a href="#" class="button text">Explore our restaurants</a>
     </section>
@@ -57,16 +57,83 @@
     <section class="restaurants spacing bkg-light-gray">
         <h2 class="text-title">Restaurants</h2>
         <div class="column align-center">
-            <div href="#" class="card">
+            <div class="card">
                 <div class="card-tag">New</div>
                 <img class="restaurant-img" src="/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Jay Wennington"
                     title="Jay Wennington Restaurant">
-
                 <div class="card-text">
-                    <h2 class="text-large">The Full Palette</h2>
-                    <p class="text">New York</p>
+                    <div class="row">
+                        <div class="column">
+                            <h2 class="text-large">The Full Palette</h2>
+                            <a href="#" class="stretch-link text">New York</a>
+                        </div>
+                        <div class="column">
+                            <form>
+                                <button type="submit" class="z-1">
+                                    <i class="fa-regular fa-heart fav-icon xl-icon"></i>
+                                </button>
+                            </form>
+                        </div>
+                    </div>
                 </div>
-                
+            </div>
+            <div class="card">
+                <div class="card-tag">New</div>
+                <img class="restaurant-img" src="/images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Stil"
+                    title="Stil Restaurant">
+                <div class="card-text">
+                    <div class="row">
+                        <div class="column">
+                            <h2 class="text-large">The Full Palette</h2>
+                            <a href="#" class="stretch-link text">New York</a>
+                        </div>
+                        <div class="column">
+                            <form>
+                                <button type="submit" class="z-1">
+                                    <i class="fa-regular fa-heart fav-icon xl-icon"></i>
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="restaurant-img" src="/images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Toa Heftiba"
+                    title="Toa Heftiba Restaurant">
+                <div class="card-text">
+                    <div class="row">
+                        <div class="column">
+                            <h2 class="text-large">The Full Palette</h2>
+                            <a href="#" class="stretch-link text">New York</a>
+                        </div>
+                        <div class="column">
+                            <form>
+                                <button type="submit" class="z-1">
+                                    <i class="fa-regular fa-heart fav-icon xl-icon"></i>
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="restaurant-img" src="/images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Louis Hansel"
+                    title="Louis Hansel Restaurant">
+                <div class="card-text">
+                    <div class="row">
+                        <div class="column">
+                            <h2 class="text-large">The Full Palette</h2>
+                            <a href="#" class="stretch-link text">New York</a>
+                        </div>
+                        <div class="column">
+                            <form>
+                                <button type="submit" class="z-1">
+                                    <i class="fa-regular fa-heart fav-icon xl-icon"></i>
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
