--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
 <body>
     <header>
-        <div class="navbar">
-            <a href="#" class="back-icon"><i class="fa-solid fa-arrow-left"></i></a>
+        <div class="navbar navbar-shadow row align-center">
             <img class="navbar-logo" src="./images/ohmyfood.png">
         </div>
         <div class="location-info text">
@@ -59,7 +58,7 @@
         <div class="column align-center">
             <div class="card">
                 <div class="card-tag">New</div>
-                <img class="restaurant-img" src="/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Jay Wennington"
+                <img class="restaurant-img round-border" src="/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Jay Wennington"
                     title="Jay Wennington Restaurant">
                 <div class="card-text">
                     <div class="row">
@@ -70,6 +69,7 @@
                         <div class="column">
                             <form>
                                 <button type="submit" class="z-1">
+                                    <i class="fa-solid fa-heart fav-icon xl-icon solid-icon"></i>
                                     <i class="fa-regular fa-heart fav-icon xl-icon"></i>
                                 </button>
                             </form>
@@ -79,7 +79,7 @@
             </div>
             <div class="card">
                 <div class="card-tag">New</div>
-                <img class="restaurant-img" src="/images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Stil"
+                <img class="restaurant-img round-border" src="/images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Stil"
                     title="Stil Restaurant">
                 <div class="card-text">
                     <div class="row">
@@ -90,6 +90,7 @@
                         <div class="column">
                             <form>
                                 <button type="submit" class="z-1">
+                                    <i class="fa-solid fa-heart fav-icon xl-icon solid-icon"></i>
                                     <i class="fa-regular fa-heart fav-icon xl-icon"></i>
                                 </button>
                             </form>
@@ -98,7 +99,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="restaurant-img" src="/images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Toa Heftiba"
+                <img class="restaurant-img round-border" src="/images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Toa Heftiba"
                     title="Toa Heftiba Restaurant">
                 <div class="card-text">
                     <div class="row">
@@ -109,6 +110,7 @@
                         <div class="column">
                             <form>
                                 <button type="submit" class="z-1">
+                                    <i class="fa-solid fa-heart fav-icon xl-icon solid-icon"></i>
                                     <i class="fa-regular fa-heart fav-icon xl-icon"></i>
                                 </button>
                             </form>
@@ -117,7 +119,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="restaurant-img" src="/images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Louis Hansel"
+                <img class="restaurant-img round-border" src="/images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Louis Hansel"
                     title="Louis Hansel Restaurant">
                 <div class="card-text">
                     <div class="row">
@@ -128,6 +130,7 @@
                         <div class="column">
                             <form>
                                 <button type="submit" class="z-1">
+                                    <i class="fa-solid fa-heart fav-icon xl-icon solid-icon"></i>
                                     <i class="fa-regular fa-heart fav-icon xl-icon"></i>
                                 </button>
                             </form>
