removes empty classes

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                         <div class="column">
                             <form>
                                 <button type="submit" class="z-1">
-                                    <i class="fa-solid fa-heart fav-icon xl-icon solid-icon"></i>
-                                    <i class="fa-regular fa-heart fav-icon xl-icon"></i>
+                                    <i class="fa-solid fa-heart xl-icon solid-icon"></i>
+                                    <i class="fa-regular fa-heart xl-icon"></i>
                                 </button>
                             </form>
                         </div>
@@ -142,11 +142,11 @@
 
     </section>
 
-    <section class="footer spacing bkg-light-black spacing-top">
+    <section class="spacing bkg-light-black spacing-top">
         <div class="column small-gap">
-            <a href="#" class="text-large white logo-font">
+            <p class="text-large white logo-font">
                 ohmyfood
-            </a>
+            </p>
             <a href="#" class="text white">
                 <i class="fa-solid fa-utensils small-width s-icon"></i>
                 Suggest a restaurant
