card grid fixed

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <section class="restaurants spacing bkg-light-gray">
         <h2 class="text-title">Restaurants</h2>
-        <div class="column align-center">
+        <div class="card-group align-center">
             <div class="card">
                 <div class="card-tag">New</div>
                 <img class="restaurant-img round-border" src="/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Jay Wennington"
