menu dished created

--- a/bastille.html
+++ b/bastille.html
@@ -28,12 +28,12 @@
             title="Toa Heftiba Restaurant">
     </header>
 
-    <section class="menu spacing bkg-light-gray">
+    <section class="menu spacing bkg-light-gray relative">
         <div class="row bottom-spacing">
-            <div class="column">
+            <div class="column menu-title">
                 <p class="xl-icon logo-font">Bastille</p>
             </div>
-            <div class="column">
+            <div class="column menu-title">
                 <form>
                     <button type="submit" class="z-1">
                         <i class="fa-solid fa-heart xl-icon solid-icon"></i>
@@ -42,50 +42,61 @@
                 </form>
             </div>
         </div>
-        <p class="text-large graphite">
-            ENTREES
-        </p>
-        <div class="line"></div>
-
         <div class="bottom-spacing">
-            <div class="dishes row">
-                <div class="column">
+            <p class="text-large graphite">ENTREES</p>
+            <div class="line"></div>
+
+            <a href="#" class="dishes row">
+                <div class="column double">
                     <h2>Citrus Squid Carpaccio</h2>
-                    <div class="row">
-                        <p class="graphite">With orange zest</p>
-                        <p class="price graphite">25€</p>
-                    </div>
+                    <p>With orange zest</p>
                 </div>
-            </div>
-            <div class="dishes row">
-                <div class="column">
-                    <h2>Grandmother's Vegetable Soup</h2>
-                    <div class="row">
-                        <p class="graphite">Carrots, parsnips, Jerusalem artichoke</p>
-                        <p class="price graphite">35€</p>
-                    </div>
+                <div class="column price">
+                    <p>25€</p>
                 </div>
-            </div>
-            <div class="dishes row">
-                <div class="column">
+                <div class="column dish-icon">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
+            </a>
+            <a href="#" class="dishes row">
+                <div class="column double">
+                    <h2 class="ellipsis">Grandmother's Vegetable Soup</h2>
+                    <p class="ellipsis">Carrots, parsnips, Jerusalem artichoke</p>
+                </div>
+                <div class="column price">
+                    <p>35€</p>
+                </div>
+                <div class="column dish-icon">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
+            </a>
+            <a href="#" class="dishes row">
+                <div class="column double">
                     <h2>Onion Soup</h2>
-                    <div class="row">
-                        <p class="graphite">Revisted</p>
-                        <p class="price graphite">20€</p>
-                    </div>
+                    <p>Revisted</p>
                 </div>
-            </div>
+                <div class="column price">
+                    <p>20€</p>
+                </div>
+                <div class="column dish-icon">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
+            </a>
         </div>
 
-        <p class="text-large graphite">
-            MAIN DISH
-        </p>
-        <div class="line"></div>
+        <div class="bottom-spacing">
+            <p class="text-large graphite">
+                MAIN DISH
+            </p>
+            <div class="line"></div>
+        </div>
 
-        <p class="text-large graphite">
-            DESSERTS
-        </p>
-        <div class="line"></div>
+        <div class="bottom-spacing">
+            <p class="text-large graphite">
+                DESSERTS
+            </p>
+            <div class="line"></div>
+        </div>
 
 
 
