--- a/index.html
+++ b/index.html
@@ -15,132 +15,144 @@
 </head>
 
 <body>
-    <header>
-        <div class="navbar navbar-shadow row align-center">
-            <img class="navbar-logo" src="./images/ohmyfood.png">
-        </div>
-        <div class="location-info text">
-            <div class="location-icon spacing-icon">
-                <i class="fa-solid fa-location-dot"></i>
+    <div class="container">
+        <!-- <div class="loader">
+            <div class="lds-ring">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
             </div>
-            <p>Paris, Belleville</p>
-        </div>
-    </header>
+        </div> -->
+        <header>
+            <div class="navbar navbar-shadow row align-center">
+                <img class="navbar-logo" src="./images/ohmyfood.png">
+            </div>
+            <div class="location-info text">
+                <div class="location-icon spacing-icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                </div>
+                <p>Paris, Belleville</p>
+            </div>
+        </header>
 
-    <section class="column align-center bkg-light-gray spacing">
-        <h2 class="bottom-spacing text-title text-center">Book the menu you like</h2>
-        <p class="bottom-spacing text-large dark-gray max-width text-center">Discover top-of-the-art restaurants we picked for you
-        </p>
-        <a href="#" class="button text">Explore our restaurants</a>
-    </section>
+        <section class="column align-center bkg-light-gray spacing">
+            <h2 class="bottom-spacing text-title text-center">Book the menu you like</h2>
+            <p class="bottom-spacing text-large dark-gray max-width text-center">Discover top-of-the-art restaurants we
+                picked for you
+            </p>
+            <a href="#" class="button text">Explore our restaurants</a>
+        </section>
 
-    <section class="bottom-spacing">
-        <h2 class="spacing text-title">How it works</h2>
+        <section class="bottom-spacing">
+            <h2 class="spacing text-title">How it works</h2>
 
-        <ol class="info-list">
-            <li>
-                <i class="fa-solid fa-mobile-screen-button dark-gray spacing-icon"></i>
-                Chose a restaurant
-            </li>
-            <li>
-                <i class="fa-sharp fa-solid fa-list-ul dark-gray spacing-icon"></i>
-                Create your menu
-            </li>
-            <li class="active">
-                <i class="fa-solid fa-store color-primary spacing-icon"></i>
-                Go enjoy it at the restaurant
-            </li>
-        </ol>
-    </section>
+            <ol class="info-list">
+                <li>
+                    <i class="fa-solid fa-mobile-screen-button dark-gray spacing-icon"></i>
+                    Chose a restaurant
+                </li>
+                <li>
+                    <i class="fa-sharp fa-solid fa-list-ul dark-gray spacing-icon"></i>
+                    Create your menu
+                </li>
+                <li class="active">
+                    <i class="fa-solid fa-store color-primary spacing-icon"></i>
+                    Go enjoy it at the restaurant
+                </li>
+            </ol>
+        </section>
 
-    <section class="restaurants spacing bkg-light-gray">
-        <h2 class="text-title">Restaurants</h2>
-        <div class="card-group align-center">
-            <div class="card">
-                <div class="card-tag">New</div>
-                <img class="restaurant-img round-border" src="/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Jay Wennington"
-                    title="Jay Wennington Restaurant">
-                <div class="card-text">
-                    <div class="row">
-                        <div class="column">
-                            <h2 class="text-large">The Full Palette</h2>
-                            <a href="#" class="stretch-link text">New York</a>
+        <section class="restaurants spacing bkg-light-gray">
+            <h2 class="text-title">Restaurants</h2>
+            <div class="card-group align-center">
+                <div class="card">
+                    <div class="card-tag">New</div>
+                    <img class="restaurant-img round-border" src="/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                        alt="Jay Wennington" title="Jay Wennington Restaurant">
+                    <div class="card-text">
+                        <div class="row">
+                            <div class="column">
+                                <h2 class="text-large">The Full Palette</h2>
+                                <a href="#" class="stretch-link text">New York</a>
+                            </div>
+                            <div class="column">
+                                <form>
+                                    <button type="submit" class="z-1 card-icon">
+                                        <i class="fa-solid fa-heart fav-icon xl-icon solid-icon"></i>
+                                        <i class="fa-regular fa-heart fav-icon xl-icon"></i>
+                                    </button>
+                                </form>
+                            </div>
                         </div>
-                        <div class="column">
-                            <form>
-                                <button type="submit" class="z-1">
-                                    <i class="fa-solid fa-heart fav-icon xl-icon solid-icon"></i>
-                                    <i class="fa-regular fa-heart fav-icon xl-icon"></i>
-                                </button>
-                            </form>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-tag">New</div>
+                    <img class="restaurant-img round-border" src="/images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Stil"
+                        title="Stil Restaurant">
+                    <div class="card-text">
+                        <div class="row">
+                            <div class="column">
+                                <h2 class="text-large">The Full Palette</h2>
+                                <a href="#" class="stretch-link text">New York</a>
+                            </div>
+                            <div class="column">
+                                <form>
+                                    <button type="submit" class="z-1 card-icon">
+                                        <i class="fa-solid fa-heart fav-icon xl-icon solid-icon"></i>
+                                        <i class="fa-regular fa-heart fav-icon xl-icon"></i>
+                                    </button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="restaurant-img round-border" src="/images/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                        alt="Toa Heftiba" title="Toa Heftiba Restaurant">
+                    <div class="card-text">
+                        <div class="row">
+                            <div class="column">
+                                <h2 class="text-large">The Full Palette</h2>
+                                <a href="#" class="stretch-link text">New York</a>
+                            </div>
+                            <div class="column">
+                                <form>
+                                    <button type="submit" class="z-1 card-icon">
+                                        <i class="fa-solid fa-heart fav-icon xl-icon solid-icon"></i>
+                                        <i class="fa-regular fa-heart fav-icon xl-icon"></i>
+                                    </button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="restaurant-img round-border"
+                        src="/images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Louis Hansel"
+                        title="Louis Hansel Restaurant">
+                    <div class="card-text">
+                        <div class="row">
+                            <div class="column">
+                                <h2 class="text-large">The Full Palette</h2>
+                                <a href="#" class="stretch-link text">New York</a>
+                            </div>
+                            <div class="column">
+                                <form>
+                                    <button type="submit" class="z-1 card-icon">
+                                        <i class="fa-solid fa-heart xl-icon solid-icon"></i>
+                                        <i class="fa-regular fa-heart xl-icon"></i>
+                                    </button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="card-tag">New</div>
-                <img class="restaurant-img round-border" src="/images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Stil"
-                    title="Stil Restaurant">
-                <div class="card-text">
-                    <div class="row">
-                        <div class="column">
-                            <h2 class="text-large">The Full Palette</h2>
-                            <a href="#" class="stretch-link text">New York</a>
-                        </div>
-                        <div class="column">
-                            <form>
-                                <button type="submit" class="z-1">
-                                    <i class="fa-solid fa-heart fav-icon xl-icon solid-icon"></i>
-                                    <i class="fa-regular fa-heart fav-icon xl-icon"></i>
-                                </button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <img class="restaurant-img round-border" src="/images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Toa Heftiba"
-                    title="Toa Heftiba Restaurant">
-                <div class="card-text">
-                    <div class="row">
-                        <div class="column">
-                            <h2 class="text-large">The Full Palette</h2>
-                            <a href="#" class="stretch-link text">New York</a>
-                        </div>
-                        <div class="column">
-                            <form>
-                                <button type="submit" class="z-1">
-                                    <i class="fa-solid fa-heart fav-icon xl-icon solid-icon"></i>
-                                    <i class="fa-regular fa-heart fav-icon xl-icon"></i>
-                                </button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <img class="restaurant-img round-border" src="/images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Louis Hansel"
-                    title="Louis Hansel Restaurant">
-                <div class="card-text">
-                    <div class="row">
-                        <div class="column">
-                            <h2 class="text-large">The Full Palette</h2>
-                            <a href="#" class="stretch-link text">New York</a>
-                        </div>
-                        <div class="column">
-                            <form>
-                                <button type="submit" class="z-1">
-                                    <i class="fa-solid fa-heart xl-icon solid-icon"></i>
-                                    <i class="fa-regular fa-heart xl-icon"></i>
-                                </button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-    </section>
+        </section>
+    </div>
 
     <section class="spacing bkg-light-black spacing-top">
         <div class="column small-gap">
