--- a/le-gourmand.html
+++ b/le-gourmand.html
@@ -24,14 +24,14 @@
                 <img class="navbar-logo" src="./images/ohmyfood.png">
             </div>
         </div>
-        <img class="restaurant-img" src="/images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Toa Heftiba"
+        <img class="restaurant-img" src="/images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Toa Heftiba"
             title="Toa Heftiba Restaurant">
     </header>
 
     <section class="menu spacing bkg-light-gray relative">
-        <div class="row bottom-spacing flex-title">
+        <div class="row bottom-spacing">
             <div class="column menu-title flex-title">
-                <p class="xl-icon logo-font">Bastille</p>
+                <p class="xl-icon logo-font">Le Gourmand</p>
             </div>
             <div class="column title-icon">
                 <form>
@@ -48,8 +48,8 @@
 
             <a href="#" class="dishes row menu--fade menu--fade-1">
                 <div class="column double">
-                    <h2 class="ellipsis">Citrus Squid Carpaccio</h2>
-                    <p class="ellipsis">With orange zest</p>
+                    <h2 class="ellipsis">Tuna Carpaccio</h2>
+                    <p class="ellipsis">Seasoned with yuzu</p>
                 </div>
                 <div class="column price">
                     <p>25€</p>
@@ -60,8 +60,8 @@
             </a>
             <a href="#" class="dishes row menu--fade menu--fade-2">
                 <div class="column double">
-                    <h2 class="ellipsis">Grandmother's Vegetable Soup</h2>
-                    <p class="ellipsis">Carrots, parsnips, Jerusalem artichoke</p>
+                    <h2 class="ellipsis">Cruncky Lobster Croquets</h2>
+                    <p class="ellipsis">With seasonal vegetables</p>
                 </div>
                 <div class="column price">
                     <p>35€</p>
@@ -72,8 +72,8 @@
             </a>
             <a href="#" class="dishes row menu--fade menu--fade-3">
                 <div class="column double">
-                    <h2 class="ellipsis">Onion Soup</h2>
-                    <p class="ellipsis">Revisted</p>
+                    <h2 class="ellipsis">Mushroom soup</h2>
+                    <p class="ellipsis">With truffles</p>
                 </div>
                 <div class="column price">
                     <p>20€</p>
@@ -92,8 +92,8 @@
 
             <a href="#" class="dishes row menu--fade menu--fade-1">
                 <div class="column double">
-                    <h2 class="ellipsis">Scallops</h2>
-                    <p class="ellipsis">With mashed parsnip</p>
+                    <h2>Roast Chicken with Provincal Herbs</h2>
+                    <p class="ellipsis">With truffle cream</p>
                 </div>
                 <div class="column price">
                     <p>40€</p>
@@ -104,8 +104,8 @@
             </a>
             <a href="#" class="dishes row menu--fade menu--fade-2">
                 <div class="column double">
-                    <h2 class="ellipsis">Magret de canard</h2>
-                    <p class="ellipsis">With mashed potatoes</p>
+                    <h2 class="ellipsis">Roasted Lobster</h2>
+                    <p class="ellipsis">With seasonal vegetables</p>
                 </div>
                 <div class="column price">
                     <p>35€</p>
@@ -116,8 +116,8 @@
             </a>
             <a href="#" class="dishes row menu--fade menu--fade-3">
                 <div class="column double">
-                    <h2 class="ellipsis">Game Hen</h2>
-                    <p class="ellipsis">With vegetable gnocchis</p>
+                    <h2 class="ellipsis">Angust Beef Ribs</h2>
+                    <p class="ellipsis">With mashed parshnips</p>
                 </div>
                 <div class="column price">
                     <p>44€</p>
@@ -136,8 +136,8 @@
 
             <a href="#" class="dishes row menu--fade menu--fade-1">
                 <div class="column double">
-                    <h2 class="ellipsis">Floral Ice Cream</h2>
-                    <p class="ellipsis">With hazelnut butter</p>
+                    <h2 class="ellipsis">Assorted Dessert Plate</h2>
+                    <p class="ellipsis">Chef's choice</p>
                 </div>
                 <div class="column price">
                     <p>18€</p>
@@ -148,7 +148,7 @@
             </a>
             <a href="#" class="dishes row menu--fade menu--fade-2">
                 <div class="column double">
-                    <h2 class="ellipsis">Chocolate Lava Cake</h2>
+                    <h2 class="ellipsis">Crème brulée</h2>
                     <p class="ellipsis">Revisted</p>
                 </div>
                 <div class="column price">
@@ -160,8 +160,8 @@
             </a>
             <a href="#" class="dishes row menu--fade menu--fade-3">
                 <div class="column double">
-                    <h2 class="ellipsis">Napolean</h2>
-                    <p class="ellipsis">With blueberries and marzipan</p>
+                    <h2 class="ellipsis">Tiramissu</h2>
+                    <p class="ellipsis">With hazelnuts</p>
                 </div>
                 <div class="column price">
                     <p>23€</p>
