--- a/the-enchanted.html
+++ b/the-enchanted.html
@@ -24,14 +24,14 @@
                 <img class="navbar-logo" src="./images/ohmyfood.png">
             </div>
         </div>
-        <img class="restaurant-img" src="/images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Toa Heftiba"
+        <img class="restaurant-img" src="/images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Toa Heftiba"
             title="Toa Heftiba Restaurant">
     </header>
 
     <section class="menu spacing bkg-light-gray relative">
-        <div class="row bottom-spacing flex-title">
+        <div class="row bottom-spacing">
             <div class="column menu-title flex-title">
-                <p class="xl-icon logo-font">Bastille</p>
+                <p class="xl-icon logo-font">The Enchanted Plate</p>
             </div>
             <div class="column title-icon">
                 <form>
@@ -48,8 +48,8 @@
 
             <a href="#" class="dishes row menu--fade menu--fade-1">
                 <div class="column double">
-                    <h2 class="ellipsis">Citrus Squid Carpaccio</h2>
-                    <p class="ellipsis">With orange zest</p>
+                    <h2 class="ellipsis">Foie Gras Ravioli</h2>
+                    <p class="ellipsis">With truffle cream</p>
                 </div>
                 <div class="column price">
                     <p>25€</p>
@@ -60,8 +60,8 @@
             </a>
             <a href="#" class="dishes row menu--fade menu--fade-2">
                 <div class="column double">
-                    <h2 class="ellipsis">Grandmother's Vegetable Soup</h2>
-                    <p class="ellipsis">Carrots, parsnips, Jerusalem artichoke</p>
+                    <h2 class="ellipsis">Oscietra Caviar</h2>
+                    <p class="ellipsis">With buckwheat blinis</p>
                 </div>
                 <div class="column price">
                     <p>35€</p>
@@ -72,11 +72,23 @@
             </a>
             <a href="#" class="dishes row menu--fade menu--fade-3">
                 <div class="column double">
-                    <h2 class="ellipsis">Onion Soup</h2>
-                    <p class="ellipsis">Revisted</p>
+                    <h2 class="ellipsis">Lobster and Leek Foam</h2>
+                    <p class="ellipsis">Marinated with orange zest</p>
                 </div>
                 <div class="column price">
                     <p>20€</p>
+                </div>
+                <div class="column dish-icon">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
+            </a>
+            <a href="#" class="dishes row menu--fade menu--fade-3">
+                <div class="column double">
+                    <h2 class="ellipsis">Duck Foie Gras</h2>
+                    <p class="ellipsis">With fig jam and grilled baguette</p>
+                </div>
+                <div class="column price">
+                    <p>35€</p>
                 </div>
                 <div class="column dish-icon">
                     <i class="fa-solid fa-circle-check"></i>
@@ -92,8 +104,8 @@
 
             <a href="#" class="dishes row menu--fade menu--fade-1">
                 <div class="column double">
-                    <h2 class="ellipsis">Scallops</h2>
-                    <p class="ellipsis">With mashed parsnip</p>
+                    <h2 class="ellipsis">Fresh Buttered Scallops</h2>
+                    <p class="ellipsis">With white celery puree</p>
                 </div>
                 <div class="column price">
                     <p>40€</p>
@@ -104,8 +116,8 @@
             </a>
             <a href="#" class="dishes row menu--fade menu--fade-2">
                 <div class="column double">
-                    <h2 class="ellipsis">Magret de canard</h2>
-                    <p class="ellipsis">With mashed potatoes</p>
+                    <h2 class="ellipsis">Pan-Fried Lobster</h2>
+                    <p class="ellipsis">With mashed sweet potatoes</p>
                 </div>
                 <div class="column price">
                     <p>35€</p>
@@ -116,8 +128,8 @@
             </a>
             <a href="#" class="dishes row menu--fade menu--fade-3">
                 <div class="column double">
-                    <h2 class="ellipsis">Game Hen</h2>
-                    <p class="ellipsis">With vegetable gnocchis</p>
+                    <h2 class="ellipsis">Braised Ox Tail</h2>
+                    <p class="ellipsis">With wild rice and lemon zest</p>
                 </div>
                 <div class="column price">
                     <p>44€</p>
@@ -136,8 +148,8 @@
 
             <a href="#" class="dishes row menu--fade menu--fade-1">
                 <div class="column double">
-                    <h2 class="ellipsis">Floral Ice Cream</h2>
-                    <p class="ellipsis">With hazelnut butter</p>
+                    <h2>Chocolate and Hazelnut Macaroon</h2>
+                    <p class="ellipsis">With caramel butter ice cream</p>
                 </div>
                 <div class="column price">
                     <p>18€</p>
@@ -148,8 +160,8 @@
             </a>
             <a href="#" class="dishes row menu--fade menu--fade-2">
                 <div class="column double">
-                    <h2 class="ellipsis">Chocolate Lava Cake</h2>
-                    <p class="ellipsis">Revisted</p>
+                    <h2 class="ellipsis">Baba au rhum</h2>
+                    <p class="ellipsis">With lemon drizzle</p>
                 </div>
                 <div class="column price">
                     <p>22€</p>
@@ -160,8 +172,8 @@
             </a>
             <a href="#" class="dishes row menu--fade menu--fade-3">
                 <div class="column double">
-                    <h2 class="ellipsis">Napolean</h2>
-                    <p class="ellipsis">With blueberries and marzipan</p>
+                    <h2 class="ellipsis">Lemon Meringue Pie</h2>
+                    <p class="ellipsis">Destructured</p>
                 </div>
                 <div class="column price">
                     <p>23€</p>
