--- a/the-full.html
+++ b/the-full.html
@@ -24,14 +24,14 @@
                 <img class="navbar-logo" src="./images/ohmyfood.png">
             </div>
         </div>
-        <img class="restaurant-img" src="/images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Toa Heftiba"
+        <img class="restaurant-img" src="/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Toa Heftiba"
             title="Toa Heftiba Restaurant">
     </header>
 
     <section class="menu spacing bkg-light-gray relative">
-        <div class="row bottom-spacing flex-title">
+        <div class="row bottom-spacing">
             <div class="column menu-title flex-title">
-                <p class="xl-icon logo-font">Bastille</p>
+                <p class="xl-icon logo-font">The Full Palette</p>
             </div>
             <div class="column title-icon">
                 <form>
@@ -48,8 +48,8 @@
 
             <a href="#" class="dishes row menu--fade menu--fade-1">
                 <div class="column double">
-                    <h2 class="ellipsis">Citrus Squid Carpaccio</h2>
-                    <p class="ellipsis">With orange zest</p>
+                    <h2 class="ellipsis">Escargot</h2>
+                    <p class="ellipsis">With southern French spices</p>
                 </div>
                 <div class="column price">
                     <p>25€</p>
@@ -60,8 +60,8 @@
             </a>
             <a href="#" class="dishes row menu--fade menu--fade-2">
                 <div class="column double">
-                    <h2 class="ellipsis">Grandmother's Vegetable Soup</h2>
-                    <p class="ellipsis">Carrots, parsnips, Jerusalem artichoke</p>
+                    <h2 class="ellipsis">Duck Foie Gras</h2>
+                    <p class="ellipsis">With black truffle shavings</p>
                 </div>
                 <div class="column price">
                     <p>35€</p>
@@ -72,8 +72,8 @@
             </a>
             <a href="#" class="dishes row menu--fade menu--fade-3">
                 <div class="column double">
-                    <h2 class="ellipsis">Onion Soup</h2>
-                    <p class="ellipsis">Revisted</p>
+                    <h2 class="ellipsis">Fried egg</h2>
+                    <p class="ellipsis">Seasoned with truffle cream and pepper</p>
                 </div>
                 <div class="column price">
                     <p>20€</p>
@@ -92,8 +92,8 @@
 
             <a href="#" class="dishes row menu--fade menu--fade-1">
                 <div class="column double">
-                    <h2 class="ellipsis">Scallops</h2>
-                    <p class="ellipsis">With mashed parsnip</p>
+                    <h2 class="ellipsis">Herb-Encrusted Steak</h2>
+                    <p class="ellipsis">With delicately sliced and seasoned vegetables</p>
                 </div>
                 <div class="column price">
                     <p>40€</p>
@@ -104,8 +104,8 @@
             </a>
             <a href="#" class="dishes row menu--fade menu--fade-2">
                 <div class="column double">
-                    <h2 class="ellipsis">Magret de canard</h2>
-                    <p class="ellipsis">With mashed potatoes</p>
+                    <h2 class="ellipsis">Ox Tail Shepard's Pie</h2>
+                    <p class="ellipsis">With black truffle and pureed parsnips</p>
                 </div>
                 <div class="column price">
                     <p>35€</p>
@@ -116,8 +116,8 @@
             </a>
             <a href="#" class="dishes row menu--fade menu--fade-3">
                 <div class="column double">
-                    <h2 class="ellipsis">Game Hen</h2>
-                    <p class="ellipsis">With vegetable gnocchis</p>
+                    <h2 class="ellipsis">Filet of Sole</h2>
+                    <p class="ellipsis">With citrus dressing</p>
                 </div>
                 <div class="column price">
                     <p>44€</p>
@@ -136,8 +136,8 @@
 
             <a href="#" class="dishes row menu--fade menu--fade-1">
                 <div class="column double">
-                    <h2 class="ellipsis">Floral Ice Cream</h2>
-                    <p class="ellipsis">With hazelnut butter</p>
+                    <h2 class="ellipsis">Paris-Brest</h2>
+                    <p class="ellipsis">Revisted</p>
                 </div>
                 <div class="column price">
                     <p>18€</p>
@@ -148,8 +148,8 @@
             </a>
             <a href="#" class="dishes row menu--fade menu--fade-2">
                 <div class="column double">
-                    <h2 class="ellipsis">Chocolate Lava Cake</h2>
-                    <p class="ellipsis">Revisted</p>
+                    <h2 class="ellipsis">Chocolate Macaroons</h2>
+                    <p class="ellipsis">With canilla ice cream</p>
                 </div>
                 <div class="column price">
                     <p>22€</p>
@@ -160,8 +160,8 @@
             </a>
             <a href="#" class="dishes row menu--fade menu--fade-3">
                 <div class="column double">
-                    <h2 class="ellipsis">Napolean</h2>
-                    <p class="ellipsis">With blueberries and marzipan</p>
+                    <h2 class="ellipsis">Chocolate Mousse</h2>
+                    <p class="ellipsis">With spices and black truffle</p>
                 </div>
                 <div class="column price">
                     <p>23€</p>
