--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
 <body>
     <div class="container">
-        <!-- <div class="loader">
+        <div class="loader">
             <div class="lds-ring">
                 <div></div>
                 <div></div>
                 <div></div>
                 <div></div>
             </div>
-        </div> -->
+        </div>
         <header>
             <div class="navbar navbar-shadow row align-center">
                 <img class="navbar-logo" src="./images/ohmyfood.png">
@@ -36,32 +36,35 @@
             </div>
         </header>
 
-        <section class="column align-center bkg-light-gray spacing">
-            <h2 class="bottom-spacing text-title text-center">Book the menu you like</h2>
-            <p class="bottom-spacing text-large dark-gray max-width text-center">Discover top-of-the-art restaurants we
-                picked for you
-            </p>
-            <a href="#" class="button text">Explore our restaurants</a>
-        </section>
+        <div class="desktop-row desktop-bottom-spc">
+            <section class="info column align-center bkg-light-gray spacing">
+                <h2 class="bottom-spacing text-title text-center">Book the menu you like</h2>
+                <p class="bottom-spacing text-large dark-gray max-width text-center">Discover top-of-the-art restaurants
+                    we
+                    picked for you
+                </p>
+                <a href="#" class="button text">Explore our restaurants</a>
+            </section>
 
-        <section class="bottom-spacing">
-            <h2 class="spacing text-title">How it works</h2>
+            <section class="bottom-spacing">
+                <h2 class="spacing text-title">How it works</h2>
 
-            <ol class="info-list">
-                <li>
-                    <i class="fa-solid fa-mobile-screen-button dark-gray spacing-icon"></i>
-                    Chose a restaurant
-                </li>
-                <li>
-                    <i class="fa-sharp fa-solid fa-list-ul dark-gray spacing-icon"></i>
-                    Create your menu
-                </li>
-                <li class="active">
-                    <i class="fa-solid fa-store color-primary spacing-icon"></i>
-                    Go enjoy it at the restaurant
-                </li>
-            </ol>
-        </section>
+                <ol class="info-list">
+                    <li>
+                        <i class="fa-solid fa-mobile-screen-button dark-gray spacing-icon"></i>
+                        Chose a restaurant
+                    </li>
+                    <li>
+                        <i class="fa-sharp fa-solid fa-list-ul dark-gray spacing-icon"></i>
+                        Create your menu
+                    </li>
+                    <li class="active">
+                        <i class="fa-solid fa-store color-primary spacing-icon"></i>
+                        Go enjoy it at the restaurant
+                    </li>
+                </ol>
+            </section>
+        </div>
 
         <section class="restaurants spacing bkg-light-gray">
             <h2 class="text-title">Restaurants</h2>
@@ -155,7 +158,7 @@
     </div>
 
     <section class="spacing bkg-light-black spacing-top">
-        <div class="column small-gap">
+        <div class="column small-gap desktop-row footer-gap">
             <p class="text-large white logo-font">
                 ohmyfood
             </p>
