--- a/the-enchanted.html
+++ b/the-enchanted.html
@@ -15,183 +15,187 @@
 </head>
 
 <body>
-    <header>
-        <div class="navbar row">
-            <div class="column">
-                <a href="#" class="back-icon"><i class="fa-solid fa-arrow-left"></i></a>
+    <div class="container">
+        <header>
+            <div class="navbar row">
+                <div class="column">
+                    <a href="#" class="back-icon"><i class="fa-solid fa-arrow-left"></i></a>
+                </div>
+                <div class="column">
+                    <img class="navbar-logo" src="./images/ohmyfood.png">
+                </div>
             </div>
-            <div class="column">
-                <img class="navbar-logo" src="./images/ohmyfood.png">
+            <img class="restaurant-img desktop-img" src="/images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Toa Heftiba"
+                title="Toa Heftiba Restaurant">
+        </header>
+
+        <section class="menu spacing bkg-light-gray relative">
+            <div class="row bottom-spacing">
+                <div class="column menu-title flex-title">
+                    <p class="xl-icon logo-font">The Enchanted Plate</p>
+                </div>
+                <div class="column title-icon">
+                    <form>
+                        <button type="submit" class="z-1">
+                            <i class="fa-solid fa-heart xl-icon solid-icon"></i>
+                            <i class="fa-regular fa-heart xl-icon"></i>
+                        </button>
+                    </form>
+                </div>
             </div>
-        </div>
-        <img class="restaurant-img" src="/images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Toa Heftiba"
-            title="Toa Heftiba Restaurant">
-    </header>
+            <div class="desktop-row menu-gap">
+                <div class="menu-dishes bottom-spacing">
+                    <p class="text-large graphite">ENTREES</p>
+                    <div class="line"></div>
 
-    <section class="menu spacing bkg-light-gray relative">
-        <div class="row bottom-spacing">
-            <div class="column menu-title flex-title">
-                <p class="xl-icon logo-font">The Enchanted Plate</p>
+                    <a href="#" class="dishes row menu--fade menu--fade-1">
+                        <div class="column double">
+                            <h2 class="ellipsis">Foie Gras Ravioli</h2>
+                            <p class="ellipsis">With truffle cream</p>
+                        </div>
+                        <div class="column price">
+                            <p>25€</p>
+                        </div>
+                        <div class="column dish-icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="dishes row menu--fade menu--fade-2">
+                        <div class="column double">
+                            <h2 class="ellipsis">Oscietra Caviar</h2>
+                            <p class="ellipsis">With buckwheat blinis</p>
+                        </div>
+                        <div class="column price">
+                            <p>35€</p>
+                        </div>
+                        <div class="column dish-icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="dishes row menu--fade menu--fade-3">
+                        <div class="column double">
+                            <h2 class="ellipsis">Lobster and Leek Foam</h2>
+                            <p class="ellipsis">Marinated with orange zest</p>
+                        </div>
+                        <div class="column price">
+                            <p>20€</p>
+                        </div>
+                        <div class="column dish-icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="dishes row menu--fade menu--fade-3">
+                        <div class="column double">
+                            <h2 class="ellipsis">Duck Foie Gras</h2>
+                            <p class="ellipsis">With fig jam and grilled baguette</p>
+                        </div>
+                        <div class="column price">
+                            <p>35€</p>
+                        </div>
+                        <div class="column dish-icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="menu-dishes bottom-spacing">
+                    <p class="text-large graphite">
+                        MAIN DISH
+                    </p>
+                    <div class="line"></div>
+
+                    <a href="#" class="dishes row menu--fade menu--fade-1">
+                        <div class="column double">
+                            <h2 class="ellipsis">Fresh Buttered Scallops</h2>
+                            <p class="ellipsis">With white celery puree</p>
+                        </div>
+                        <div class="column price">
+                            <p>40€</p>
+                        </div>
+                        <div class="column dish-icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="dishes row menu--fade menu--fade-2">
+                        <div class="column double">
+                            <h2 class="ellipsis">Pan-Fried Lobster</h2>
+                            <p class="ellipsis">With mashed sweet potatoes</p>
+                        </div>
+                        <div class="column price">
+                            <p>35€</p>
+                        </div>
+                        <div class="column dish-icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="dishes row menu--fade menu--fade-3">
+                        <div class="column double">
+                            <h2 class="ellipsis">Braised Ox Tail</h2>
+                            <p class="ellipsis">With wild rice and lemon zest</p>
+                        </div>
+                        <div class="column price">
+                            <p>44€</p>
+                        </div>
+                        <div class="column dish-icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="menu-dishes bottom-spacing">
+                    <p class="text-large graphite">
+                        DESSERTS
+                    </p>
+                    <div class="line"></div>
+
+                    <a href="#" class="dishes row menu--fade menu--fade-1">
+                        <div class="column double">
+                            <h2 class="ellipsis">Chocolate and Hazelnut Macaroon</h2>
+                            <p class="ellipsis">With caramel butter ice cream</p>
+                        </div>
+                        <div class="column price">
+                            <p>18€</p>
+                        </div>
+                        <div class="column dish-icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="dishes row menu--fade menu--fade-2">
+                        <div class="column double">
+                            <h2 class="ellipsis">Baba au rhum</h2>
+                            <p class="ellipsis">With lemon drizzle</p>
+                        </div>
+                        <div class="column price">
+                            <p>22€</p>
+                        </div>
+                        <div class="column dish-icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="dishes row menu--fade menu--fade-3">
+                        <div class="column double">
+                            <h2 class="ellipsis">Lemon Meringue Pie</h2>
+                            <p class="ellipsis">Destructured</p>
+                        </div>
+                        <div class="column price">
+                            <p>23€</p>
+                        </div>
+                        <div class="column dish-icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </a>
+                </div>
             </div>
-            <div class="column title-icon">
-                <form>
-                    <button type="submit" class="z-1">
-                        <i class="fa-solid fa-heart xl-icon solid-icon"></i>
-                        <i class="fa-regular fa-heart xl-icon"></i>
-                    </button>
-                </form>
+            <div class="row spacing-top bottom-spacing align-center">
+                <a href="#" class="button text">Order</a>
             </div>
-        </div>
-        <div class="bottom-spacing">
-            <p class="text-large graphite">ENTREES</p>
-            <div class="line"></div>
-
-            <a href="#" class="dishes row menu--fade menu--fade-1">
-                <div class="column double">
-                    <h2 class="ellipsis">Foie Gras Ravioli</h2>
-                    <p class="ellipsis">With truffle cream</p>
-                </div>
-                <div class="column price">
-                    <p>25€</p>
-                </div>
-                <div class="column dish-icon">
-                    <i class="fa-solid fa-circle-check"></i>
-                </div>
-            </a>
-            <a href="#" class="dishes row menu--fade menu--fade-2">
-                <div class="column double">
-                    <h2 class="ellipsis">Oscietra Caviar</h2>
-                    <p class="ellipsis">With buckwheat blinis</p>
-                </div>
-                <div class="column price">
-                    <p>35€</p>
-                </div>
-                <div class="column dish-icon">
-                    <i class="fa-solid fa-circle-check"></i>
-                </div>
-            </a>
-            <a href="#" class="dishes row menu--fade menu--fade-3">
-                <div class="column double">
-                    <h2 class="ellipsis">Lobster and Leek Foam</h2>
-                    <p class="ellipsis">Marinated with orange zest</p>
-                </div>
-                <div class="column price">
-                    <p>20€</p>
-                </div>
-                <div class="column dish-icon">
-                    <i class="fa-solid fa-circle-check"></i>
-                </div>
-            </a>
-            <a href="#" class="dishes row menu--fade menu--fade-3">
-                <div class="column double">
-                    <h2 class="ellipsis">Duck Foie Gras</h2>
-                    <p class="ellipsis">With fig jam and grilled baguette</p>
-                </div>
-                <div class="column price">
-                    <p>35€</p>
-                </div>
-                <div class="column dish-icon">
-                    <i class="fa-solid fa-circle-check"></i>
-                </div>
-            </a>
-        </div>
-
-        <div class="bottom-spacing">
-            <p class="text-large graphite">
-                MAIN DISH
-            </p>
-            <div class="line"></div>
-
-            <a href="#" class="dishes row menu--fade menu--fade-1">
-                <div class="column double">
-                    <h2 class="ellipsis">Fresh Buttered Scallops</h2>
-                    <p class="ellipsis">With white celery puree</p>
-                </div>
-                <div class="column price">
-                    <p>40€</p>
-                </div>
-                <div class="column dish-icon">
-                    <i class="fa-solid fa-circle-check"></i>
-                </div>
-            </a>
-            <a href="#" class="dishes row menu--fade menu--fade-2">
-                <div class="column double">
-                    <h2 class="ellipsis">Pan-Fried Lobster</h2>
-                    <p class="ellipsis">With mashed sweet potatoes</p>
-                </div>
-                <div class="column price">
-                    <p>35€</p>
-                </div>
-                <div class="column dish-icon">
-                    <i class="fa-solid fa-circle-check"></i>
-                </div>
-            </a>
-            <a href="#" class="dishes row menu--fade menu--fade-3">
-                <div class="column double">
-                    <h2 class="ellipsis">Braised Ox Tail</h2>
-                    <p class="ellipsis">With wild rice and lemon zest</p>
-                </div>
-                <div class="column price">
-                    <p>44€</p>
-                </div>
-                <div class="column dish-icon">
-                    <i class="fa-solid fa-circle-check"></i>
-                </div>
-            </a>
-        </div>
-
-        <div class="bottom-spacing">
-            <p class="text-large graphite">
-                DESSERTS
-            </p>
-            <div class="line"></div>
-
-            <a href="#" class="dishes row menu--fade menu--fade-1">
-                <div class="column double">
-                    <h2>Chocolate and Hazelnut Macaroon</h2>
-                    <p class="ellipsis">With caramel butter ice cream</p>
-                </div>
-                <div class="column price">
-                    <p>18€</p>
-                </div>
-                <div class="column dish-icon">
-                    <i class="fa-solid fa-circle-check"></i>
-                </div>
-            </a>
-            <a href="#" class="dishes row menu--fade menu--fade-2">
-                <div class="column double">
-                    <h2 class="ellipsis">Baba au rhum</h2>
-                    <p class="ellipsis">With lemon drizzle</p>
-                </div>
-                <div class="column price">
-                    <p>22€</p>
-                </div>
-                <div class="column dish-icon">
-                    <i class="fa-solid fa-circle-check"></i>
-                </div>
-            </a>
-            <a href="#" class="dishes row menu--fade menu--fade-3">
-                <div class="column double">
-                    <h2 class="ellipsis">Lemon Meringue Pie</h2>
-                    <p class="ellipsis">Destructured</p>
-                </div>
-                <div class="column price">
-                    <p>23€</p>
-                </div>
-                <div class="column dish-icon">
-                    <i class="fa-solid fa-circle-check"></i>
-                </div>
-            </a>
-        </div>
-        <div class="row spacing-top bottom-spacing align-center">
-            <a href="#" class="button text">Order</a>
-        </div>
 
 
-    </section>
+        </section>
+    </div>
 
     <section class="spacing bkg-light-black spacing-top full-width">
-        <div class="column small-gap">
+        <div class="column small-gap desktop-row footer-gap">
             <p class="text-large white logo-font">
                 ohmyfood
             </p>
@@ -213,4 +217,5 @@
 
     </section>
 </body>
+
 </html>
