--- a/the-full.html
+++ b/the-full.html
@@ -15,171 +15,175 @@
 </head>
 
 <body>
-    <header>
-        <div class="navbar row">
-            <div class="column">
-                <a href="#" class="back-icon"><i class="fa-solid fa-arrow-left"></i></a>
+    <div class="container">
+        <header>
+            <div class="navbar row">
+                <div class="column">
+                    <a href="#" class="back-icon"><i class="fa-solid fa-arrow-left"></i></a>
+                </div>
+                <div class="column">
+                    <img class="navbar-logo" src="./images/ohmyfood.png">
+                </div>
             </div>
-            <div class="column">
-                <img class="navbar-logo" src="./images/ohmyfood.png">
+            <img class="restaurant-img desktop-img" src="/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="Toa Heftiba" title="Toa Heftiba Restaurant">
+        </header>
+
+        <section class="menu spacing bkg-light-gray relative">
+            <div class="row bottom-spacing">
+                <div class="column menu-title flex-title">
+                    <p class="xl-icon logo-font">The Full Palette</p>
+                </div>
+                <div class="column title-icon">
+                    <form>
+                        <button type="submit" class="z-1">
+                            <i class="fa-solid fa-heart xl-icon solid-icon"></i>
+                            <i class="fa-regular fa-heart xl-icon"></i>
+                        </button>
+                    </form>
+                </div>
             </div>
-        </div>
-        <img class="restaurant-img" src="/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Toa Heftiba"
-            title="Toa Heftiba Restaurant">
-    </header>
+            <div class="desktop-row menu-gap">
+                <div class="menu-dishes bottom-spacing">
+                    <p class="text-large graphite">ENTREES</p>
+                    <div class="line"></div>
 
-    <section class="menu spacing bkg-light-gray relative">
-        <div class="row bottom-spacing">
-            <div class="column menu-title flex-title">
-                <p class="xl-icon logo-font">The Full Palette</p>
+                    <a href="#" class="dishes row menu--fade menu--fade-1">
+                        <div class="column double">
+                            <h2 class="ellipsis">Escargot</h2>
+                            <p class="ellipsis">With southern French spices</p>
+                        </div>
+                        <div class="column price">
+                            <p>25€</p>
+                        </div>
+                        <div class="column dish-icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="dishes row menu--fade menu--fade-2">
+                        <div class="column double">
+                            <h2 class="ellipsis">Duck Foie Gras</h2>
+                            <p class="ellipsis">With black truffle shavings</p>
+                        </div>
+                        <div class="column price">
+                            <p>35€</p>
+                        </div>
+                        <div class="column dish-icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="dishes row menu--fade menu--fade-3">
+                        <div class="column double">
+                            <h2 class="ellipsis">Fried egg</h2>
+                            <p class="ellipsis">Seasoned with truffle cream and pepper</p>
+                        </div>
+                        <div class="column price">
+                            <p>20€</p>
+                        </div>
+                        <div class="column dish-icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="menu-dishes bottom-spacing">
+                    <p class="text-large graphite">
+                        MAIN DISH
+                    </p>
+                    <div class="line"></div>
+
+                    <a href="#" class="dishes row menu--fade menu--fade-1">
+                        <div class="column double">
+                            <h2 class="ellipsis">Herb-Encrusted Steak</h2>
+                            <p class="ellipsis">With delicately sliced and seasoned vegetables</p>
+                        </div>
+                        <div class="column price">
+                            <p>40€</p>
+                        </div>
+                        <div class="column dish-icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="dishes row menu--fade menu--fade-2">
+                        <div class="column double">
+                            <h2 class="ellipsis">Ox Tail Shepard's Pie</h2>
+                            <p class="ellipsis">With black truffle and pureed parsnips</p>
+                        </div>
+                        <div class="column price">
+                            <p>35€</p>
+                        </div>
+                        <div class="column dish-icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="dishes row menu--fade menu--fade-3">
+                        <div class="column double">
+                            <h2 class="ellipsis">Filet of Sole</h2>
+                            <p class="ellipsis">With citrus dressing</p>
+                        </div>
+                        <div class="column price">
+                            <p>44€</p>
+                        </div>
+                        <div class="column dish-icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="menu-dishes bottom-spacing">
+                    <p class="text-large graphite">
+                        DESSERTS
+                    </p>
+                    <div class="line"></div>
+
+                    <a href="#" class="dishes row menu--fade menu--fade-1">
+                        <div class="column double">
+                            <h2 class="ellipsis">Paris-Brest</h2>
+                            <p class="ellipsis">Revisted</p>
+                        </div>
+                        <div class="column price">
+                            <p>18€</p>
+                        </div>
+                        <div class="column dish-icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="dishes row menu--fade menu--fade-2">
+                        <div class="column double">
+                            <h2 class="ellipsis">Chocolate Macaroons</h2>
+                            <p class="ellipsis">With canilla ice cream</p>
+                        </div>
+                        <div class="column price">
+                            <p>22€</p>
+                        </div>
+                        <div class="column dish-icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="dishes row menu--fade menu--fade-3">
+                        <div class="column double">
+                            <h2 class="ellipsis">Chocolate Mousse</h2>
+                            <p class="ellipsis">With spices and black truffle</p>
+                        </div>
+                        <div class="column price">
+                            <p>23€</p>
+                        </div>
+                        <div class="column dish-icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </a>
+                </div>
             </div>
-            <div class="column title-icon">
-                <form>
-                    <button type="submit" class="z-1">
-                        <i class="fa-solid fa-heart xl-icon solid-icon"></i>
-                        <i class="fa-regular fa-heart xl-icon"></i>
-                    </button>
-                </form>
+            <div class="row spacing-top bottom-spacing align-center">
+                <a href="#" class="button text">Order</a>
             </div>
-        </div>
-        <div class="bottom-spacing">
-            <p class="text-large graphite">ENTREES</p>
-            <div class="line"></div>
-
-            <a href="#" class="dishes row menu--fade menu--fade-1">
-                <div class="column double">
-                    <h2 class="ellipsis">Escargot</h2>
-                    <p class="ellipsis">With southern French spices</p>
-                </div>
-                <div class="column price">
-                    <p>25€</p>
-                </div>
-                <div class="column dish-icon">
-                    <i class="fa-solid fa-circle-check"></i>
-                </div>
-            </a>
-            <a href="#" class="dishes row menu--fade menu--fade-2">
-                <div class="column double">
-                    <h2 class="ellipsis">Duck Foie Gras</h2>
-                    <p class="ellipsis">With black truffle shavings</p>
-                </div>
-                <div class="column price">
-                    <p>35€</p>
-                </div>
-                <div class="column dish-icon">
-                    <i class="fa-solid fa-circle-check"></i>
-                </div>
-            </a>
-            <a href="#" class="dishes row menu--fade menu--fade-3">
-                <div class="column double">
-                    <h2 class="ellipsis">Fried egg</h2>
-                    <p class="ellipsis">Seasoned with truffle cream and pepper</p>
-                </div>
-                <div class="column price">
-                    <p>20€</p>
-                </div>
-                <div class="column dish-icon">
-                    <i class="fa-solid fa-circle-check"></i>
-                </div>
-            </a>
-        </div>
-
-        <div class="bottom-spacing">
-            <p class="text-large graphite">
-                MAIN DISH
-            </p>
-            <div class="line"></div>
-
-            <a href="#" class="dishes row menu--fade menu--fade-1">
-                <div class="column double">
-                    <h2 class="ellipsis">Herb-Encrusted Steak</h2>
-                    <p class="ellipsis">With delicately sliced and seasoned vegetables</p>
-                </div>
-                <div class="column price">
-                    <p>40€</p>
-                </div>
-                <div class="column dish-icon">
-                    <i class="fa-solid fa-circle-check"></i>
-                </div>
-            </a>
-            <a href="#" class="dishes row menu--fade menu--fade-2">
-                <div class="column double">
-                    <h2 class="ellipsis">Ox Tail Shepard's Pie</h2>
-                    <p class="ellipsis">With black truffle and pureed parsnips</p>
-                </div>
-                <div class="column price">
-                    <p>35€</p>
-                </div>
-                <div class="column dish-icon">
-                    <i class="fa-solid fa-circle-check"></i>
-                </div>
-            </a>
-            <a href="#" class="dishes row menu--fade menu--fade-3">
-                <div class="column double">
-                    <h2 class="ellipsis">Filet of Sole</h2>
-                    <p class="ellipsis">With citrus dressing</p>
-                </div>
-                <div class="column price">
-                    <p>44€</p>
-                </div>
-                <div class="column dish-icon">
-                    <i class="fa-solid fa-circle-check"></i>
-                </div>
-            </a>
-        </div>
-
-        <div class="bottom-spacing">
-            <p class="text-large graphite">
-                DESSERTS
-            </p>
-            <div class="line"></div>
-
-            <a href="#" class="dishes row menu--fade menu--fade-1">
-                <div class="column double">
-                    <h2 class="ellipsis">Paris-Brest</h2>
-                    <p class="ellipsis">Revisted</p>
-                </div>
-                <div class="column price">
-                    <p>18€</p>
-                </div>
-                <div class="column dish-icon">
-                    <i class="fa-solid fa-circle-check"></i>
-                </div>
-            </a>
-            <a href="#" class="dishes row menu--fade menu--fade-2">
-                <div class="column double">
-                    <h2 class="ellipsis">Chocolate Macaroons</h2>
-                    <p class="ellipsis">With canilla ice cream</p>
-                </div>
-                <div class="column price">
-                    <p>22€</p>
-                </div>
-                <div class="column dish-icon">
-                    <i class="fa-solid fa-circle-check"></i>
-                </div>
-            </a>
-            <a href="#" class="dishes row menu--fade menu--fade-3">
-                <div class="column double">
-                    <h2 class="ellipsis">Chocolate Mousse</h2>
-                    <p class="ellipsis">With spices and black truffle</p>
-                </div>
-                <div class="column price">
-                    <p>23€</p>
-                </div>
-                <div class="column dish-icon">
-                    <i class="fa-solid fa-circle-check"></i>
-                </div>
-            </a>
-        </div>
-        <div class="row spacing-top bottom-spacing align-center">
-            <a href="#" class="button text">Order</a>
-        </div>
 
 
-    </section>
+        </section>
+    </div>
 
     <section class="spacing bkg-light-black spacing-top full-width">
-        <div class="column small-gap">
+        <div class="column small-gap desktop-row footer-gap">
             <p class="text-large white logo-font">
                 ohmyfood
             </p>
@@ -201,4 +205,5 @@
 
     </section>
 </body>
+
 </html>
