images path fixed

--- a/bastille.html
+++ b/bastille.html
@@ -22,10 +22,10 @@
                     <a href="#" class="back-icon"><i class="fa-solid fa-arrow-left"></i></a>
                 </div>
                 <div class="column">
-                    <img class="navbar-logo" src="/images/ohmyfood.png">
+                    <img class="navbar-logo" src="./images/ohmyfood.png">
                 </div>
             </div>
-            <img class="restaurant-img desktop-img" src="/images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Toa Heftiba"
+            <img class="restaurant-img desktop-img" src="./images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Toa Heftiba"
                 title="Toa Heftiba Restaurant">
         </header>
 
