--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <header>
             <div class="navbar navbar-shadow row align-center">
-                <img class="navbar-logo" src="./images/ohmyfood.png">
+                <img class="navbar-logo" src="../images/ohmyfood.png">
             </div>
             <div class="location-info text">
                 <div class="location-icon spacing-icon">
@@ -71,7 +71,7 @@
             <div class="card-group align-center">
                 <div class="card">
                     <div class="card-tag">New</div>
-                    <img class="restaurant-img round-border" src="/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                    <img class="restaurant-img round-border" src="./images/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                         alt="Jay Wennington" title="Jay Wennington Restaurant">
                     <div class="card-text">
                         <div class="row">
@@ -92,7 +92,7 @@
                 </div>
                 <div class="card">
                     <div class="card-tag">New</div>
-                    <img class="restaurant-img round-border" src="/images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Stil"
+                    <img class="restaurant-img round-border" src="./images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Stil"
                         title="Stil Restaurant">
                     <div class="card-text">
                         <div class="row">
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="restaurant-img round-border" src="/images/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                    <img class="restaurant-img round-border" src="./images/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                         alt="Toa Heftiba" title="Toa Heftiba Restaurant">
                     <div class="card-text">
                         <div class="row">
@@ -133,7 +133,7 @@
                 </div>
                 <div class="card">
                     <img class="restaurant-img round-border"
-                        src="/images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Louis Hansel"
+                        src="./images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Louis Hansel"
                         title="Louis Hansel Restaurant">
                     <div class="card-text">
                         <div class="row">
