--- a/the-full.html
+++ b/the-full.html
@@ -22,10 +22,10 @@
                     <a href="#" class="back-icon"><i class="fa-solid fa-arrow-left"></i></a>
                 </div>
                 <div class="column">
-                    <img class="navbar-logo" src="./images/ohmyfood.png">
+                    <img class="navbar-logo" src="../images/ohmyfood.png">
                 </div>
             </div>
-            <img class="restaurant-img desktop-img" src="/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            <img class="restaurant-img desktop-img" src="./images/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="Toa Heftiba" title="Toa Heftiba Restaurant">
         </header>
 
