Cards layout fixed

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <header>
             <div class="navbar navbar-shadow row align-center">
-                <img class="navbar-logo" src="../images/ohmyfood.png">
+                <img class="navbar-logo" src="./images/ohmyfood.png">
             </div>
             <div class="location-info text">
                 <div class="location-icon spacing-icon">
@@ -79,13 +79,11 @@
                                 <h2 class="text-large">The Full Palette</h2>
                                 <a href="#" class="stretch-link text">New York</a>
                             </div>
-                            <div class="column">
-                                <form>
-                                    <button type="submit" class="z-1 card-icon">
-                                        <i class="fa-solid fa-heart fav-icon xl-icon solid-icon"></i>
-                                        <i class="fa-regular fa-heart fav-icon xl-icon"></i>
-                                    </button>
-                                </form>
+                            <div>
+                                <button type="submit" class="z-1 card-icon">
+                                    <i class="fa-solid fa-heart fav-icon xl-icon solid-icon"></i>
+                                    <i class="fa-regular fa-heart fav-icon xl-icon"></i>
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -97,16 +95,14 @@
                     <div class="card-text">
                         <div class="row">
                             <div class="column">
-                                <h2 class="text-large">The Full Palette</h2>
+                                <h2 class="text-large">The Enchanted Plate</h2>
                                 <a href="#" class="stretch-link text">New York</a>
                             </div>
-                            <div class="column">
-                                <form>
-                                    <button type="submit" class="z-1 card-icon">
-                                        <i class="fa-solid fa-heart fav-icon xl-icon solid-icon"></i>
-                                        <i class="fa-regular fa-heart fav-icon xl-icon"></i>
-                                    </button>
-                                </form>
+                            <div>
+                                <button type="submit" class="z-1 card-icon">
+                                    <i class="fa-solid fa-heart fav-icon xl-icon solid-icon"></i>
+                                    <i class="fa-regular fa-heart fav-icon xl-icon"></i>
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -117,16 +113,14 @@
                     <div class="card-text">
                         <div class="row">
                             <div class="column">
-                                <h2 class="text-large">The Full Palette</h2>
+                                <h2 class="text-large">Bastille</h2>
                                 <a href="#" class="stretch-link text">New York</a>
                             </div>
-                            <div class="column">
-                                <form>
-                                    <button type="submit" class="z-1 card-icon">
-                                        <i class="fa-solid fa-heart fav-icon xl-icon solid-icon"></i>
-                                        <i class="fa-regular fa-heart fav-icon xl-icon"></i>
-                                    </button>
-                                </form>
+                            <div>
+                                <button type="submit" class="z-1 card-icon">
+                                    <i class="fa-solid fa-heart fav-icon xl-icon solid-icon"></i>
+                                    <i class="fa-regular fa-heart fav-icon xl-icon"></i>
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -138,16 +132,14 @@
                     <div class="card-text">
                         <div class="row">
                             <div class="column">
-                                <h2 class="text-large">The Full Palette</h2>
+                                <h2 class="text-large">Le Gourmand</h2>
                                 <a href="#" class="stretch-link text">New York</a>
                             </div>
-                            <div class="column">
-                                <form>
-                                    <button type="submit" class="z-1 card-icon">
-                                        <i class="fa-solid fa-heart xl-icon solid-icon"></i>
-                                        <i class="fa-regular fa-heart xl-icon"></i>
-                                    </button>
-                                </form>
+                            <div>
+                                <button type="submit" class="z-1 card-icon">
+                                    <i class="fa-solid fa-heart xl-icon solid-icon"></i>
+                                    <i class="fa-regular fa-heart xl-icon"></i>
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -158,24 +150,26 @@
     </div>
 
     <section class="spacing bkg-light-black spacing-top">
-        <div class="column small-gap desktop-row footer-gap">
-            <p class="text-large white logo-font">
-                ohmyfood
-            </p>
-            <a href="#" class="text white">
-                <i class="fa-solid fa-utensils small-width s-icon"></i>
-                Suggest a restaurant
-            </a>
-            <a href="#" class="text white">
-                <i class="fa-solid fa-handshake-angle small-width xs-icon"></i>
-                Become a partner
-            </a>
-            <a href="#" class="text white">
-                Legal
-            </a>
-            <a href="#" class="text white">
-                Contact
-            </a>
+        <div class="container">
+            <div class="column small-gap desktop-row footer-gap">
+                <p class="text-large white logo-font">
+                    ohmyfood
+                </p>
+                <a href="#" class="text white">
+                    <i class="fa-solid fa-utensils small-width s-icon"></i>
+                    Suggest a restaurant
+                </a>
+                <a href="#" class="text white">
+                    <i class="fa-solid fa-handshake-angle small-width xs-icon"></i>
+                    Become a partner
+                </a>
+                <a href="#" class="text white">
+                    Legal
+                </a>
+                <a href="#" class="text white">
+                    Contact
+                </a>
+            </div>
         </div>
 
     </section>
